# sportsref

./: .gitignore  .pre-commit-config.yaml  README.md  constants.json  euro_player_test.ipynb  euro_teams_test.ipynb  getConstants.py  playTest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_script.py  todo  wpModel.py
doc/: Makefile  conf.py  index.rst  make.bat  modules.rst
docs/: Makefile  conf.py  index.rst  make.bat
docs/source/: conf.py  index.rst  modules.rst  sportsref.nfl.finders.rst  sportsref.nfl.rst  sportsref.rst
finders/: PlayerSeasonFinder.py  __init__.py  constants.py  finderConstants.json  finders.py  getFinderConstants.py
finders/PlayerSeasonFinder/: PlayerSeasonFinder.py  constants.py
pfr/: README.md  __init__.py  boxscores.py  decorators.py  players.py  teams.py  utils.py
pfr/finders/: GPF.py  GamePlayFinder.py  PSF.py  PlayerSeasonFinder.py  __init__.py
pfr/pfr_scraper/: scrapy.cfg
pfr/utils/: __init__.py  playParsing.py  utils.py
sportsref/: __init__.py  decorators.py  options.py  utils.py
sportsref/cbb/: __init__.py  players.py
sportsref/doc/: sportsref.nba.rst
sportsref/euro/: __init__.py  boxscores.py  players.py  seasons.py  teams.py
sportsref/nba/: __init__.py  boxscores.py  pbp.py  players.py  seasons.py  teams.py
sportsref/ncaab/: __init__.py  boxscores.py  players.py
sportsref/ncaaf/: __init__.py  players.py  teams.py
sportsref/nfl/: __init__.py  boxscores.py  pbp.py  players.py  seasons.py  teams.py  winProb.py
sportsref/pfr/: __init__.py  boxscores.py  pbp.py  players.py  teams.py  winProb.py
(+16 files in other folders)
