[tool.poetry]
name = "sportsref"
version = "0.11.0"
description = ""
authors = ["Matt Goldberg <matt.goldberg7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mementos = "^1.3.1"
numexpr = "^2.7.1"
numpy = "^1.19.4"
pandas = "^1.1.4"
pyquery = "^1.4.3"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
ipdb = "^0.13.4"
ipython = "^7.19.0"
jupyter = "^1.0.0"
pre-commit = "^2.9.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
